* update all translations

--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -1,49 +1,49 @@
 {
-    "Actual version: ": "",
-    "Are you sure?": "",
-    "Auto re-pair": "",
-    "Available version: ": "",
-    "Baud rate:": "",
-    "Bind": "",
-    "Board type:": "",
-    "Brand": "",
-    "Cancel": "",
-    "Com port:": "",
-    "Connection timeout:": "",
-    "Devices": "",
-    "Disable inclusion mode": "",
-    "Drop the files here": "",
-    "Enable inclusion mode": "",
-    "File is too big!": "",
-    "Flash Arduino": "",
-    "Flash default sketch": "",
-    "Flash newest sketch": "",
-    "Flash will start immediately. Are you sure?": "",
-    "Flashing... Please wait": "",
-    "Inclusion mode is active": "",
-    "Inclusion mode is inactive": "",
-    "Inclusion mode timeout:": "",
-    "Not available": "",
-    "Number": "",
-    "Ok": "",
-    "Options": "",
-    "Pair": "",
-    "Question": "",
-    "RfxCom adapter settings": "",
-    "Select port": "",
-    "Timeout for auto re-pair:": "",
-    "Upload sketch HEX File for RfxCom: ": "",
-    "Values": "",
-    "You have newest version.": "",
-    "download-help": "",
-    "for <b>%s</b> minutes": "",
-    "for one minute": "",
-    "inclusion help": "",
-    "invalid_extension": "",
-    "just <b>now</b>": "",
-    "ms": "",
-    "not-started": "",
-    "re-pair help": "",
+    "Actual version: ": "Aktualna wersja:",
+    "Are you sure?": "Jesteś pewny?",
+    "Auto re-pair": "Automatyczne ponowne parowanie",
+    "Available version: ": "Dostępna wersja:",
+    "Baud rate:": "Szybkość transmisji:",
+    "Bind": "Wiązać",
+    "Board type:": "Rodzaj deski:",
+    "Brand": "Marka",
+    "Cancel": "Anuluj",
+    "Com port:": "Port komunikacyjny:",
+    "Connection timeout:": "Czas połączenia minął:",
+    "Devices": "Urządzenia",
+    "Disable inclusion mode": "Wyłącz tryb włączenia",
+    "Drop the files here": "Upuść pliki tutaj",
+    "Enable inclusion mode": "Włącz tryb włączenia",
+    "File is too big!": "Plik jest za duży!",
+    "Flash Arduino": "Flash Arduino",
+    "Flash default sketch": "Domyślny szkic Flash",
+    "Flash newest sketch": "Flash najnowszy szkic",
+    "Flash will start immediately. Are you sure?": "Flash rozpocznie się natychmiast. ",
+    "Flashing... Please wait": "Miga... Proszę czekać",
+    "Inclusion mode is active": "Tryb włączenia jest aktywny",
+    "Inclusion mode is inactive": "Tryb włączania jest nieaktywny",
+    "Inclusion mode timeout:": "Limit czasu trybu dołączania:",
+    "Not available": "Niedostępne",
+    "Number": "Numer",
+    "Ok": "Dobrze",
+    "Options": "Opcje",
+    "Pair": "Para",
+    "Question": "Pytanie",
+    "RfxCom adapter settings": "Ustawienia adaptera RFxCom",
+    "Select port": "Wybierz port",
+    "Timeout for auto re-pair:": "Limit czasu automatycznego ponownego sparowania:",
+    "Upload sketch HEX File for RfxCom: ": "Prześlij plik HEX szkicu dla RfxCom:",
+    "Values": "Wartości",
+    "You have newest version.": "Masz najnowszą wersję.",
+    "download-help": "Znajdziesz go <a href=\"http://www.nemcon.nl/blog2/download\" target=\"_blank\">tutaj</a>. ",
+    "for <b>%s</b> minutes": "przez <b>%s</b> minut",
+    "for one minute": "na minutę",
+    "inclusion help": "s (ustaw na 0 dla ręcznego sterowania)",
+    "invalid_extension": "Nieprawidłowe rozszerzenie pliku! ",
+    "just <b>now</b>": "po prostu <b>teraz</b>",
+    "ms": "SM",
+    "not-started": "Adapter nie jest uruchomiony. ",
+    "re-pair help": "Jeśli pojawi się podobne urządzenie, zostanie ono automatycznie sparowane",
     "rfxcom adapter settings": "",
-    "serial": ""
+    "serial": "seryjny"
 }
