--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -1,49 +1,49 @@
 {
-    "Actual version: ": "",
-    "Are you sure?": "",
-    "Auto re-pair": "",
-    "Available version: ": "",
-    "Baud rate:": "",
-    "Bind": "",
-    "Board type:": "",
-    "Brand": "",
-    "Cancel": "",
-    "Com port:": "",
-    "Connection timeout:": "",
-    "Devices": "",
-    "Disable inclusion mode": "",
-    "Drop the files here": "",
-    "Enable inclusion mode": "",
-    "File is too big!": "",
-    "Flash Arduino": "",
-    "Flash default sketch": "",
-    "Flash newest sketch": "",
-    "Flash will start immediately. Are you sure?": "",
-    "Flashing... Please wait": "",
-    "Inclusion mode is active": "",
-    "Inclusion mode is inactive": "",
-    "Inclusion mode timeout:": "",
-    "Not available": "",
-    "Number": "",
-    "Ok": "",
-    "Options": "",
-    "Pair": "",
-    "Question": "",
-    "RfxCom adapter settings": "",
-    "Select port": "",
-    "Timeout for auto re-pair:": "",
-    "Upload sketch HEX File for RfxCom: ": "",
-    "Values": "",
-    "You have newest version.": "",
-    "download-help": "",
-    "for <b>%s</b> minutes": "",
-    "for one minute": "",
-    "inclusion help": "",
-    "invalid_extension": "",
-    "just <b>now</b>": "",
-    "ms": "",
-    "not-started": "",
-    "re-pair help": "",
+    "Actual version: ": "实际版本：",
+    "Are you sure?": "你确定吗？",
+    "Auto re-pair": "自动重新配对",
+    "Available version: ": "可用版本：",
+    "Baud rate:": "波特率：",
+    "Bind": "绑定",
+    "Board type:": "板型：",
+    "Brand": "牌",
+    "Cancel": "取消",
+    "Com port:": "通讯端口：",
+    "Connection timeout:": "连接超时：",
+    "Devices": "设备",
+    "Disable inclusion mode": "禁用包含模式",
+    "Drop the files here": "将文件放在这里",
+    "Enable inclusion mode": "启用包含模式",
+    "File is too big!": "文件太大！",
+    "Flash Arduino": "闪存 Arduino",
+    "Flash default sketch": "Flash 默认草图",
+    "Flash newest sketch": "Flash 最新草图",
+    "Flash will start immediately. Are you sure?": "Flash 将立即启动。",
+    "Flashing... Please wait": "闪烁...请稍候",
+    "Inclusion mode is active": "包含模式处于活动状态",
+    "Inclusion mode is inactive": "包含模式未激活",
+    "Inclusion mode timeout:": "包含模式超时：",
+    "Not available": "无法使用",
+    "Number": "数字",
+    "Ok": "好的",
+    "Options": "选项",
+    "Pair": "一对",
+    "Question": "问题",
+    "RfxCom adapter settings": "RfxCom 适配器设置",
+    "Select port": "选择端口",
+    "Timeout for auto re-pair:": "自动重新配对超时：",
+    "Upload sketch HEX File for RfxCom: ": "为 RfxCom 上传草图 HEX 文件：",
+    "Values": "价值观",
+    "You have newest version.": "你有最新版本。",
+    "download-help": "您可以在<a href=\"http://www.nemcon.nl/blog2/download\" target=\"_blank\">此处</a>找到它。",
+    "for <b>%s</b> minutes": "<b>%s</b> 分钟",
+    "for one minute": "一分钟",
+    "inclusion help": "sec（手动控制设置为0）",
+    "invalid_extension": "文件扩展名无效！",
+    "just <b>now</b>": "就<b>现在</b>",
+    "ms": "小姐",
+    "not-started": "适配器未启动。",
+    "re-pair help": "如果出现类似的设备，它会自动配对",
     "rfxcom adapter settings": "",
-    "serial": ""
+    "serial": "连续剧"
 }
